--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@
     .menu-branding .portrait {
       width: 250px;
       height: 250px;
-      background: url(/dist/img/portrait.jpg);
+      background: url(../img/portrait.jpg);
       border-radius: 50%;
       border: solid 3px #eece1a; }
   .menu .nav-item {
