--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,7 +1,7 @@
 $primary-color: #444; // #444
 $secondary-color: #eece1a; //eece1a
 $show-home-image: true;
-$home-image: url(../img/background.jpg);
+$home-image: url(../img/background2.jpg);
 $background-opacity: 0.9;
 
 @mixin easeOut {
