--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -91,7 +91,7 @@
     .portrait {
       width: 250px;
       height: 250px;
-      background: url(/dist/img/portrait.jpg);
+      background: url(../img/portrait.jpg);
       border-radius: 50%;
       border: solid 3px $secondary-color;
     }
