Front page bug fixed

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -18,11 +18,33 @@ $background-opacity: 0.9;
       /* Sudo-element - puts in something that is not in the HTML - This is the overlay*/
       &:after {
         content: "";
-        position: absolute;
+        position: fixed; /* absolute */
         top: 0;
         right: 0;
         width: 100%;
         height: 100%;
+        z-index: -1;
+        background: rgba($primary-color, $background-opacity);
+      }
+    }
+  }
+}
+
+@mixin backgroundTilted {
+  @if $show-home-image {
+    &#bg-img {
+      background: $home-image;
+      background-attachment: fixed;
+      background-size: cover;
+
+      /* Sudo-element - puts in something that is not in the HTML - This is the overlay*/
+      &:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 150%;
         z-index: -1;
         background: rgba($primary-color, $background-opacity);
       }
@@ -40,6 +62,12 @@ $background-opacity: 0.9;
 }
 
 // Media Query Mixins
+@mixin mediaTilted {
+  @media screen and (max-height: 550px) and (max-width: 768px) {
+    @content;
+  }
+}
+
 @mixin mediaSm {
   @media screen and (max-width: 500px) {
     @content;
