Update to portfolio

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,4 +1,4 @@
-$primary-color: #1d2937; // #444
+$primary-color: #1d2937; // #444 // Changed
 $secondary-color: #f8b83f; //eece1a
 $show-home-image: true;
 $home-image: url(../img/background2.jpg);
