Color not changing

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,5 +1,5 @@
 $primary-color: #1d2937; // #444 // Changed
-$secondary-color: #f8b83f; //eece1a
+$secondary-color: #f8b83f; //eece1a // Changed
 $show-home-image: true;
 $home-image: url(../img/background2.jpg);
 $background-opacity: 0.9;
