--- a/scss/main.scss
+++ b/scss/main.scss
@@ -158,6 +158,8 @@ main {
     font-size: 2rem;
     border: 3px #fff solid;
     padding: 1.5rem 2.5rem;
+    background: $primary-color;
+    opacity: 98%;
     margin-bottom: 3rem;
     @include easeOut;
 
